Fix clouds overlapping error messages

--- a/assets/css/_chrome.scss
+++ b/assets/css/_chrome.scss
@@ -31,6 +31,7 @@ body.phone #loading {
   }
 
   .error-content {
+    position: relative;
     text-align: center;
     line-height: 1.6;
 
@@ -245,4 +246,3 @@ body.controls-fade-out .segment:not(.unmovable).hover .hover-bk {
     margin-left: 0.25em;
   }
 }
-
